# PMET-Shiny-App

./: .gitignore  01_deploy_via_Docker.sh  01_deploy_via_bash.sh  01_deploy_via_singularity.sh  app.R  app_start.R  deploy_one_bash.sh  deploy_one_step.sh  docker-compose.yml  global.R  readme.md
.github/: auto_interact.exp
PMETdev/: PMET.sh  PMET_only_intervals.sh  PMET_only_promoters.sh  PMETindex_intervals_parallel_delete_fimo.sh  PMETindex_promoters_parallel_delete_fimo.sh  binary_compile.sh  intervals_index_pair.sh  promoters_index_pair.sh  promoters_index_pair_new_fimo.sh  promoters_only_pair.sh
PMETdev/src/pmet/: CMakeLists.txt
R/: app.R  global.R
Singularities/: Singularity_nginx.def  Singularity_shiny.def
conf/: nginx.conf  shiny-server.conf
data/: motif_db_meta.json  nginx_link.txt
dockerfiles/: Dockerfile.nginx  Dockerfile.shiny
module/: heatmap.R  send_mail.R  tab_table.R
scripts/: check_CPU_number.sh  check_and_set_email_credentials.sh  cleanup_Docker.sh  colored_print.sh  create_docker_compose.sh  create_nginx_conf.sh  create_shiny_server_conf.sh  download_pmet_indexing.sh  install_R_source.sh  install_apt_tools.sh  install_python.sh  install_python_libs.sh  install_s6init.sh  install_shiny_server.sh  setup_R.sh
server/: tab_author.R  tab_heatmap.R  tab_home.R  tab_pmet.R
ui/: tab_about.R  tab_dataviewer.R  tab_heatmap.R  tab_home.R  tab_pmet.R
utils/: command_call_pmet.R  create_forked_task.R  helpers.R  utils.R
www/: _heatmap_d3.js  download_svg_by_class.js  heatmap.js  readme.md  script_for_test.js  shiny.css  style.css  ui.html  (+1 more)
(+853 files in other folders)
